Gateway extract userId and send to CompositeService